package gr.ds.unipi.noda.api.client.YYYDatabase;

public class YYYDatabaseBuilderFactory {
}
