@startuml

title __YYYDATABASE's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.client {
    namespace YYYDatabase {
      class gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseBuilderFactory {
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.client {
    namespace YYYDatabase {
      class gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem {
          + getDefaultPort()
          # getConnector()
          - YYYDatabaseSystem()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.client {
    namespace YYYDatabase {
      class gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem.Builder {
          + build()
          # self()
      }
    }
  }
  

  gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem -up-|> gr.ds.unipi.noda.api.client.NoSqlDbSystem
  gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem o-- gr.ds.unipi.noda.api.core.nosqldb.NoSqlDbConnector : connector
  gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem +-down- gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem.Builder
  gr.ds.unipi.noda.api.client.YYYDatabase.YYYDatabaseSystem.Builder -up-|> gr.ds.unipi.noda.api.client.NoSqlDbSystem.Builder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
